--- a/Pipfile
+++ b/Pipfile
@@ -1,6 +1,6 @@
 [[source]]
 name = "pypi"
-url = "https://pypi.org/simple"
+url = "http://mirrors.aliyun.com/pypi/simple/"
 verify_ssl = true
 
 [dev-packages]
@@ -10,6 +10,7 @@ fabric = "*"
 django = "==2.2.3"
 markdown = "*"
 faker = "*"
+django-pure-pagination = "*"
 
 [requires]
 python_version = "3.7"
